# reeltoolkit-renderer

./: .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Dockerfile  GPU_RENDERING_FINAL.md  GPU_RENDERING_GUIDE.md  LICENSE  MIGRATION_COMPLETE.md  MODAL_DEPLOYMENT.md  MODAL_FIX_SUMMARY.md  MODAL_QUICKSTART.md  README.md  RELEASE_SUMMARY.md  RELEASE_v0.1.11_SUMMARY.md  RUNPOD_DEPLOYMENT.md  RUNPOD_TEMPLATE.md  TODO_MODAL.md  handler.py  modal_app.py  modal_app_simple.py  pyproject.toml  requirements.txt  rp_handler.py  runpod-build-logs.txt  test_gpu_render.py  test_handler_manual.py  test_modal_local.py
.github/workflows/: ci.yml  docker-publish.yml
.runpod/: hub.json  tests.json
reel_renderer/: __init__.py  audio.py  models.py  parallel.py  pipeline.py  rendering.py  subtitles.py  types.py  video.py
renderer_service/: __init__.py  app.py  config.py  run.py
tests/: test_app.py  test_modal_render_quality.py  test_parallel_transitions.py
